<resources>
    <string name="app_name">QuizApp</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="submit">Submit</string>
    <string name="places_around_the_world">Around the world</string>
    <string name="do_you_know_which_place_it_is">Do you know which place it is?</string>
    <string name="select_topic">Select Topic</string>
    <string name="start_game">Start Game</string>
    <string name="items_test_text">Items test Text</string>
    <string name="are_you_a_fan">Are you a fan</string>
</resources>
